--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,24 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+db_config: &db_config
+  adapter: mysql2
+  host: 127.0.0.1
+  strict: true
+  port: <%= (ENV['DUAL_ENV'] == 'setup') ? ENV.fetch('PS_S0_SETUP_PORT') {7002} : ENV.fetch('PS_S0_MAIN_PORT') {7001} %>
+  reconnect: true
+  automatic_close: false
+  ssl_mode: :disabled
+  sslverify: false
+
+# Set login credentials
+login: &login
+  username: root
+  password: password
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *db_config
+  <<: *login
+  database: short_link_develop
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+  <<: *db_config
+  <<: *login
+  database: short_link_test
